syntax = "proto3";

package chat;

option go_package="chat_app/chat";

service ChatService {
    rpc Register(RegisterRequest) returns (AuthResponse) {}
    rpc Login(LoginRequest) returns (AuthResponse) {}
    rpc SendMessage(ChatMessage) returns (Empty);
    rpc StreamMessages(Empty) returns (stream ChatMessage);
  }

message ChatMessage {
    string user = 1;
    string message = 2;
    int64 timestamp = 3;
  }

message Empty {}

message RegisterRequest {
    string username = 1;
    string password = 2;
  }

message LoginRequest {
    string username = 1;
    string password = 2;
  }

message AuthResponse {
    string token = 1;
  }
